Fix the bug so now check boxes are visible

--- a/team-project/src/pages/payments/styles.css
+++ b/team-project/src/pages/payments/styles.css
@@ -4,7 +4,6 @@
   font-family: 'Poppins', sans-serif;
   margin:0; padding:0;
   box-sizing: border-box;
-  outline: none; border:none;
   text-transform: capitalize;
   transition: all .2s linear;
 }
